# Adafruit_Blinka_Raspberry_Pi5_Piomatter

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: pip.yml  pre-commit.yml  wheels.yml
examples/: adafruit_blinka_raspberry_pi5_piomatter  fbmirror.py  fbmirror_scaled.py  triple_matrix_active3_play_gif.py  triple_matrix_active3_simpletest.py  virtualdisplay.py  xdisplay_mirror.py
src/: pymain.cpp
src/adafruit_blinka_raspberry_pi5_piomatter/: __init__.py  click.py  pixelmappers.py
src/include/piomatter/: piomatter.h  render.h
